kubernetes/apps/external-services/nas-minio/api/endpoints.yaml
---
apiVersion: v1
kind: Endpoints
metadata:
  name: nas-s3
  namespace: external-services
subsets:
  - addresses:
      - ip: 10.69.10.11
    ports:
      - name: api
        port: 9000
        protocol: TCP
