kubernetes/apps/external-services/nas-minio/api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nas-s3
  namespace: external-services
spec:
  ports:
    - name: api
      # protocol: HTTP
      port: 9000
      # targetPort:
  type: ClusterIP
