kubernetes/apps/external-services/nas-minio/api/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nas-s3
  namespace: external-services
  annotations:
    external-dns.home.arpa/enabled: "true"
    external-dns.alpha.kubernetes.io/target: "ipv4.${SECRET_DOMAIN}"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "180"
    nginx.ingress.kubernetes.io/proxy-body-size: 1024m
    nginx.ingress.kubernetes.io/proxy-request-buffering: "off"
    nginx.ingress.kubernetes.io/configuration-snippet: |
      chunked_transfer_encoding off;

spec:
  ingressClassName: nginx
  tls:
    - secretName: tls.nas-s3
      hosts:
        - "nas-s3.${SECRET_DOMAIN}"

  rules:
    - host: nas-s3.${SECRET_DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nas-s3
                port:
                  name: api
